--- a/_posts/2020 하계 모각코/2020-07-23-third-mgc.md
+++ b/_posts/2020 하계 모각코/2020-07-23-third-mgc.md
@@ -15,4 +15,5 @@ category: 2020 하계 모각코
 		* C언어   
 
 * 3회차 결과   
-	* 진행중입니다.
+	* 레지스터별 역할, 어셈블리 명령어, Intel 방식, GDB 명령어에 대하여 정리하였습니다.   
+	* 모각코 공부 내용은 구글 프레젠테이션에 정리하였습니다. [구글프레젠테이션]()
