--- a/_posts/2020 하계 모각코/2020-07-23-third-mgc.md
+++ b/_posts/2020 하계 모각코/2020-07-23-third-mgc.md
@@ -17,3 +17,7 @@ category: 2020 하계 모각코
 * 3회차 결과   
 	* 레지스터별 역할, 어셈블리 명령어, Intel 방식, GDB 명령어에 대하여 정리하였습니다.   
 	* 모각코 공부 내용은 구글 문서에 정리하였습니다. ([Google 문서](https://docs.google.com/document/d/15ntRjeGRkZF00xjtgPnpZnQU25t6nZ_s6ZqWuLNirwA/edit?usp=sharing))
+
+* 간단정리 & 느낀점   
+	* Hitcon training 문제를 풀면서 보안 개념이 부족하다고 느꼈는데 이번에 관련 개념들을 간단하게 정리하였습니다.   
+	* 다음 보안 공부는 Hitcon training 5,6 개념과 문제풀이를 하려고 합니다.   
