--- a/_posts/2020 하계 모각코/2020-07-04-start-mgc.md
+++ b/_posts/2020 하계 모각코/2020-07-04-start-mgc.md
@@ -8,7 +8,7 @@ category: 2020 하계 모각코
 ### 공부   
 * Udacity: Secure and Private AI ([강의](https://classroom.udacity.com/courses/ud185))
 * 보안스터디 준비   
-* 알고리즘 ([이론공부사이트](https://www.fun-coding.org/Chapter17-graph-live.html))      
+* 오픈소스 컨트리뷰트 준비         
 
 ### 계획
 * 1회차(2020년 07월 20일 월요일)   
@@ -24,9 +24,7 @@ category: 2020 하계 모각코
 	* Udacity: Secure and Private AI 8강(Encryptyed Deep Learing) 정리   
 
 * 5회차(2020년 08월 03일 월요일)
-	* 보안스터디 준비
-	* 알고리즘(DFS & BFS)
+	* Udacity : Secure and Private AI 전체 정리   
 
 * 6회차(2020년 08월 06일 목요일)   
-	* 보안스터디 준비   
-	* 알고리즘(최소신장트리)      
+	* 오픈소스 컨트리뷰트 준비     
