--- a/_posts/2020 하계 모각코/2020-07-04-start-mgc.md
+++ b/_posts/2020 하계 모각코/2020-07-04-start-mgc.md
@@ -27,4 +27,4 @@ category: 2020 하계 모각코
 	* Udacity : Secure and Private AI 전체 정리   
 
 * 6회차(2020년 08월 06일 목요일)   
-	* 오픈소스 컨트리뷰트 준비     
+	* 오픈소스 컨트리뷰트 주제 조사     
