--- a/_posts/2020 하계 모각코/2020-08-06-sixth-mgc.md
+++ b/_posts/2020 하계 모각코/2020-08-06-sixth-mgc.md
@@ -7,10 +7,18 @@ category: 2020 하계 모각코
 ### 2020년 08월 06일 모각코 6회차   
 
 * 6회차 목표  
-	* 오픈소스 컨트리뷰트 조사 - tensorflow lite       
+	* 오픈소스 컨트리뷰트 코스 수행   
+	* 오픈소스 컨트리뷰트 모빌리티팀 주제 조사         
 
 * 6회차 결과   
-	* 진행중입니다.   
+	* 코스 2. 개발자가 협력하는 방법 이해하기   
+		* Slack, Notion   
+	* 코스 3. 개발 환경 셋팅 및 첫 Pull Request 만들기   
+		* Pull Request 수행   
+	* 모빌리티 팀 주제조사
 
 * 느낀점   
-	* 작성하려고 합니다.   
+	* 오픈소스 컨트리뷰트때 수행하지 못한 과정을 진행하는 시간을 가졌습니다.   
+	* Notion을 처음 사용하여 모각코 시간일 활용하여 조금 자세히 둘러보았습니다.
+	* 오픈소스에 저의 이름을 넣기위하여 Pull Request를 활용하는데 merge시 충돌오류가 발생해서 이번 모각코 시간에 수정하였습니다.
+	* 모빌리티 팀에 속하여서 주말에 주제를 정하기 위해서 주제에 대하여 생각해보는 시간을 가졌습니다.
